--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=5000
 NODE_ENV=development
-DATABASE_LOCAL=mongodb://localhost:27017/NodePractice
+DATABASE_LOCAL=mongodb://localhost:27017/DbName
 JWT_SECRET=secret
